# IceSYCL

./: .gitmodules  CMakeLists.txt  README.md
include/IceSYCL/: collision.h  configuration.hpp  constitutive_models.h  coordinates.hpp  descent_impl.ipp  engine.hpp  engine_impl.ipp  interaction_data.hpp  interpolation.hpp  kernel_access_abstraction.hpp  lcg_engine_impl.ipp  linear_conjugate_gradient.hpp  particle_grid_interactions.hpp  particle_grid_operations.hpp  particle_node_interactions.hpp  plastic_impl.ipp  sorting.hpp  utility.hpp
include/IceSYCL/native_api/: buffer_helpers.hpp  native_api.hpp
src/: CMakeLists.txt  IceSYCL.cpp
src/native_api/: CMakeLists.txt  native_api.cpp
tests/: CMakeLists.txt  accessor_abstraction_test.cpp  collisions_test.cpp  configtest.cpp  constitutive_models_test.cpp  coordinates_test.cpp  engine.cpp  engine_test.cpp  interpolation_test.cpp  particle_grid_interactions_test.cpp  particle_grid_operations_test.cpp  particle_node_interactions.cpp  sorting.cpp  testlib.cpp  utility_test.cpp
